update some bibtex entries

--- a/main.bib
+++ b/main.bib
@@ -67,7 +67,7 @@ MRREVIEWER = {Stewart B. Priddy},
 }
 
 @article{AdamsPrimitiveElts,
-  title={Primitive elements in the K-theory of BSU},
+  title={Primitive elements in the {$K$}-theory of {$BSU$}},
   author={Adams, J Frank},
   journal={The Quarterly Journal of Mathematics},
   volume={27},
@@ -489,18 +489,32 @@ MRREVIEWER = {J. P. C. Greenlees},
        URL = {http://dx.doi.org/10.1016/j.aim.2013.12.023},
 }
 
-@article{Beaudry,
-  title={The chromatic splitting conjecture at n= p= 2},
-  author={Beaudry, Agnes},
-  journal={arXiv preprint arXiv:1502.02190},
-  year={2015}
+@ARTICLE{Beaudry,
+   author = {{Beaudry}, A.},
+    title = "{The Chromatic Splitting Conjecture at $n=p=2$}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1502.02190},
+ primaryClass = "math.AT",
+ keywords = {Mathematics - Algebraic Topology, 55Q45, 55P60},
+     year = 2015,
+    month = feb,
+   adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150202190B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{Beardsley,
-  title={Constructions of {$MU$} by Attaching {$E_k$}-cells in Odd Degrees},
-  author={Beardsley, Jonathan},
-  journal={arXiv preprint arXiv:1708.03042},
-  year={2017}
+@ARTICLE{Beardsley,
+   author = {{Beardsley}, J.},
+    title = "{Constructions of MU by Attaching $E_k$-cells in Odd Degrees}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1708.03042},
+ primaryClass = "math.AT",
+ keywords = {Mathematics - Algebraic Topology},
+     year = 2017,
+    month = aug,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170803042B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article {BehrensBuildings,
@@ -1102,15 +1116,20 @@ MRREVIEWER = {Donald M. Davis},
   publisher={International Press of Boston}
 }
 
-@article{GanterStringyOpns,
-  title={Stringy power operations in Tate K-theory},
-  author={Ganter, Nora},
-  journal={arXiv preprint math/0701565},
-  year={2007}
+@ARTICLE{GanterStringyOpns,
+   author = {{Ganter}, N.},
+    title = "{Stringy power operations in Tate K-theory}",
+  journal = {ArXiv Mathematics e-prints},
+   eprint = {math/0701565},
+ keywords = {Mathematics - Algebraic Topology, Mathematical Physics, 55N34, 55P35, 58J26},
+     year = 2007,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2007math......1565G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @inproceedings{GiambalvoPengelley,
-  title={The homology of MSpin},
+  title={The homology of {$M\mathit{Spin}$}},
   author={Giambalvo, Vincent and Pengelley, David J},
   booktitle={Mathematical Proceedings of the Cambridge Philosophical Society},
   volume={95},
@@ -1381,7 +1400,7 @@ MRREVIEWER = {Jacques Tilouine},
 
 
 @article{HHR,
-  title={On the nonexistence of elements of Kervaire invariant one},
+  title={On the nonexistence of elements of {K}ervaire invariant one},
   author={Hill, Michael A and Hopkins, Michael J and Ravenel, Douglas C},
   journal={Annals of Mathematics},
   volume={184},
@@ -1535,7 +1554,7 @@ MRREVIEWER = {Haynes R. Miller},
 }
 
 @article{HopkinsHovey,
-  title={Spin cobordism determines real K-theory},
+  title={Spin cobordism determines real {$K$}-theory},
   author={Hopkins, Michael J and Hovey, Mark A},
   journal={Mathematische Zeitschrift},
   volume={210},
@@ -2080,26 +2099,36 @@ MRREVIEWER = {A. Liulevicius},
   publisher={American Mathematical Society}
 }
 
-@article{LauresK1LocalTmf,
-  title={K (1)-local topological modular forms},
-  author={Laures, Gerd},
-  journal={Inventiones mathematicae},
-  volume={157},
-  number={2},
-  pages={371--403},
-  year={2004},
-  publisher={Springer}
+@article {LauresK1LocalTmf,
+    AUTHOR = {Laures, Gerd},
+     TITLE = {{$K(1)$}-local topological modular forms},
+   JOURNAL = {Invent. Math.},
+  FJOURNAL = {Inventiones Mathematicae},
+    VOLUME = {157},
+      YEAR = {2004},
+    NUMBER = {2},
+     PAGES = {371--403},
+      ISSN = {0020-9910},
+   MRCLASS = {55N34 (11F23 11F85 55P43)},
+  MRNUMBER = {2076927},
+MRREVIEWER = {Matthew Ando},
+       URL = {https://doi.org/10.1007/s00222-003-0355-y},
 }
 
-@article{LauresSplitting,
-  title={An E∞ splitting of spin bordism},
-  author={Laures, Gerd},
-  journal={American Journal of Mathematics},
-  volume={125},
-  number={5},
-  pages={977--1027},
-  year={2003},
-  publisher={The Johns Hopkins University Press}
+@article {LauresSplitting,
+    AUTHOR = {Laures, Gerd},
+     TITLE = {An {$E_\infty$} splitting of spin bordism},
+   JOURNAL = {Amer. J. Math.},
+  FJOURNAL = {American Journal of Mathematics},
+    VOLUME = {125},
+      YEAR = {2003},
+    NUMBER = {5},
+     PAGES = {977--1027},
+      ISSN = {0002-9327},
+   MRCLASS = {55N22 (55P42 55P43 55S25)},
+  MRNUMBER = {2004426},
+MRREVIEWER = {Don Shimamoto},
+       URL = {http://muse.jhu.edu/journals/american_journal_of_mathematics/v125/125.5laures.pdf},
 }
 
 @ARTICLE{LauresSchuster,
@@ -2541,14 +2570,20 @@ MRREVIEWER = {J. Stasheff},
 MRREVIEWER = {S. Bloch},
 }
 
-@article{McClure,
-  title={Dyer-Lashof operations in 𝐾-theory},
-  author={McClure, James E},
-  journal={Bulletin of the American Mathematical Society},
-  volume={8},
-  number={1},
-  pages={67--72},
-  year={1983}
+@article {McClure,
+    AUTHOR = {McClure, James E.},
+     TITLE = {Dyer-{L}ashof operations in {$K$}-theory},
+   JOURNAL = {Bull. Amer. Math. Soc. (N.S.)},
+  FJOURNAL = {American Mathematical Society. Bulletin. New Series},
+    VOLUME = {8},
+      YEAR = {1983},
+    NUMBER = {1},
+     PAGES = {67--72},
+      ISSN = {0273-0979},
+   MRCLASS = {55S12 (55P47)},
+  MRNUMBER = {682824},
+MRREVIEWER = {Harvey Margolis},
+       URL = {https://doi.org/10.1090/S0273-0979-1983-15086-3},
 }
 
 @article{McTague,
@@ -2692,7 +2727,7 @@ MRREVIEWER = {Edgar H. Brown, Jr.},
 }
 
 @article{MoravaAbVarsAndKervaire,
-  title={Abelian varieties and the Kervaire invariant},
+  title={Abelian varieties and the {K}ervaire invariant},
   author={Morava, Jack},
   journal={arXiv preprint arXiv:1105.0539},
   year={2011}
@@ -2717,7 +2752,7 @@ MRREVIEWER = {P. S. Landweber},
 }
 
 @article{MoravaLocalFieldsExtraordinaryKthy,
-  title={Local fields and extraordinary K-theory},
+  title={Local fields and extraordinary {$K$}-theory},
   author={Morava, Jack},
   journal={arXiv preprint arXiv:1207.4011},
   year={2012}
@@ -2952,7 +2987,7 @@ MRREVIEWER = {P. S. Landweber},
 }
 
 @article{Priddy,
-  title={A cellular construction of BP and other irreducible spectra},
+  title={A cellular construction of {$BP$} and other irreducible spectra},
   author={Priddy, Stewart},
   journal={Mathematische Zeitschrift},
   volume={173},
@@ -3061,7 +3096,7 @@ MRREVIEWER = {J. F. Adams},
 }
 
 @inproceedings{RavenelNonexistenceArfInvariantElts,
-  title={The non-existence of odd primary Arf invariant elements in stable homotopy},
+  title={The non-existence of odd primary {A}rf invariant elements in stable homotopy},
   author={Ravenel, Douglas C},
   booktitle={Mathematical Proceedings of the Cambridge Philosophical Society},
   volume={83},
@@ -3158,7 +3193,7 @@ MRREVIEWER = {David C. Johnson},
 
 @ARTICLE{RezkFelixKlein,
   author = {Rezk, Charles},
-  title = {Elliptic Cohomology and Elliptic Curves ({F}elix {K}lein lectures, Bonn 2015)},
+  title = {Elliptic Cohomology and Elliptic Curves ({F}elix {K}lein lectures, {B}onn 2015)},
   note = {\url{http://www.math.uiuc.edu/~rezk/felix-klein-lectures-notes.pdf}, Accessed: 2016-10-07}
 }
 
@@ -3203,7 +3238,7 @@ MRREVIEWER = {Keith Peter Johnson},
 
 @ARTICLE{Rezk512Notes,
   author = {Rezk, Charles},
-  title = {Supplementary Notes for Math 512},
+  title = {Supplementary Notes for {M}ath 512},
   note = {\url{www.math.uiuc.edu/~rezk/512-spr2001-notes.pdf}, Accessed: 2016-10-28}
 }
 
@@ -3239,7 +3274,7 @@ MRREVIEWER = {Andrew J. Baker},
 }
 
 @article{Salch,
-  title={The cohomology of the height four Morava stabilizer group at large primes},
+  title={The cohomology of the height four {M}orava stabilizer group at large primes},
   author={Salch, Andrew},
   journal={arXiv preprint arXiv:1607.01108},
   year={2016}
@@ -3454,7 +3489,7 @@ MRREVIEWER = {Paul G. Goerss},
 }
 
 @article{Stolz,
-  title={Hochzusammenh{\"a}ngende Mannigfaltigkeiten und ihre R{\"a}nder},
+  title={Hochzusammenh{\"a}ngende {M}annigfaltigkeiten und ihre {R}{\"a}nder},
   author={Stolz, Stephan},
   journal={Lecture Notes in Mathematics},
   volume={1116},
