--- a/retrospective.tex
+++ b/retrospective.tex
@@ -30,7 +30,7 @@ applications to the non-existence of Smith-Toda complexes.  The next
 case after that was the binary tetrahedral group in the height two
 stabilizer group at $p=2$.
 
-Back in those days I drove an Alfa Romeo Spyder, and at some point it
+Back in those days I drove an Alfa Romeo Spider, and at some point it
 needed a new head gasket.  I had dropped the car off at small local
 shop, and when I went to pick it up the next day the mechanic told me
 he hadn't been able to get to it.  I asked how long it would be, and he
