--- a/main.bib
+++ b/main.bib
@@ -3341,6 +3341,20 @@ MRREVIEWER = {A. K. Bousfield},
   year={1988}
 }
 
+@ARTICLE{Senger,
+   author = {{Senger}, A.},
+    title = "{The Brown-Peterson spectrum is not $E_{2(p^2+2)}$ at odd primes}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1710.09822},
+ primaryClass = "math.AT",
+ keywords = {Mathematics - Algebraic Topology, 55P43},
+     year = 2017,
+    month = oct,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv171009822S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article {Shay,
     AUTHOR = {Shay, P. Brian},
      TITLE = {{${\rm mod}$} {$p$} {W}u formulas for the {S}teenrod algebra
