--- a/unknowns.tex
+++ b/unknowns.tex
@@ -297,7 +297,7 @@ In a more topological direction, one wonders to what extent it is critical to us
 
 As indicated in the introduction to \Cref{PowerOpnsChapter}, the algebraic geometry of \(E_\infty\)--ring spectra is still very much in flux, and accordingly there are a lot of interesting open questions about their interaction with the story presented here.
 
-One of the most obvious ones, almost directly cribbed out of \Cref{ConstructionOfTMFSection}, is whether \(\moduli{fg}\) itself admits a topological enrichment~\cite{GoerssRealizingFamilies}.  This question is quite flexible: varying the Grothendieck topology chosen on \(\moduli{fg}\) will almost certainly affect the positivity of the answer, and there are versions of the question that apply to \(E_\infty\) rings, \(A_\infty\) rings, or just spectra.  Still, even admitting the existence of a huge family of implicit questions, very little is known.  On the looser end, we do not have an example of a formal group that cannot arise as the formal group associated to a complex-orientable cohomology theory.  If we had such an example of a prohibited formal group, then if the selecting map \(\Spec R_0 \to \moduli{fg}\) were furthermore---for example---flat, then we could conclude that there cannot exist a topological enrichment of the flat site.  We do have one rather extreme example: one cannot adjoin \(p\){\th} roots to \(E_\infty\)--rings~\cite{SchwaenzlRolandVogt,Devalapurkar}, from which it follows that certain forms of \(K\)--theory do not have \(E_\infty\) structures, and hence the fpqc site of \(\moduli{fg}\) does not admit a topological enrichment with a sheaf of \(E_\infty\)--rings.  A recent result of Lawson also shows that \(BP\) does \emph{not} admit an \(E_\infty\) structure---at least at \(p = 2\), but his techniques are expected to yield results at odd primes as well~\cite{LawsonSecondaryPowerOps}.  This doesn't yield any information over what the above example of \(KU[\zeta_p]\) shows, but it is worth pointing out that May asked the question of whether \(BP\) admits an \(E_\infty\) structure over three decades prior~\cite{MayProblemsInLoopspaceTheory} (and it has had a long and storied intervening history), and the delay in its resolution is some indication of the difficulty of this problem.  Some other richer stacks than \(\moduli{fg}\) are known not to admit enrichment: for instance, for this same reason it follows that there cannot exist a topological enrichment of the moduli of (almost any piece of) formal groups equipped with level--\(p\) structures,\footnote{In particular, this appears to inhibit us from producing a spectrum embodying the Lubin--Tate tower at infinite level, which is a bummer from the perspective of the local Langlands program discussed above.} and Lawson has shown that there cannot exist spectra associated to certain stacks of formal \(A\)--modules~\cite{LawsonRealizability}.  Meanwhile, other nearby stacks do admit enrichemnts: there are spectra \(\TAF\), an abbreviation for ``topological automorphic forms'', which generalize \(\TMF\)~\cite{BehrensLawson}.
+One of the most obvious ones, almost directly cribbed out of \Cref{ConstructionOfTMFSection}, is whether \(\moduli{fg}\) itself admits a topological enrichment~\cite{GoerssRealizingFamilies}.  This question is quite flexible: varying the Grothendieck topology chosen on \(\moduli{fg}\) will almost certainly affect the positivity of the answer, and there are versions of the question that apply to \(E_\infty\) rings, \(A_\infty\) rings, or just spectra.  Still, even admitting the existence of a huge family of implicit questions, very little is known.  On the looser end, we do not have an example of a formal group that cannot arise as the formal group associated to a complex-orientable cohomology theory.  If we had such an example of a prohibited formal group, then if the selecting map \(\Spec R_0 \to \moduli{fg}\) were furthermore---for example---flat, then we could conclude that there cannot exist a topological enrichment of the flat site.  We do have one rather extreme example: one cannot adjoin \(p\){\th} roots to \(E_\infty\)--rings~\cite{SchwaenzlRolandVogt,Devalapurkar}, from which it follows that certain forms of \(K\)--theory do not have \(E_\infty\) structures, and hence the fpqc site of \(\moduli{fg}\) does not admit a topological enrichment with a sheaf of \(E_\infty\)--rings.  A recent result of Lawson also shows that \(BP\) does \emph{not} admit an \(E_\infty\) structure---at least at \(p = 2\), and an extension of his techniques to odd primes yield similar results in that setting~\cite{LawsonSecondaryPowerOps,Senger}.  This doesn't yield any information over what the above example of \(KU[\zeta_p]\) shows, but it is worth pointing out that May asked the question of whether \(BP\) admits an \(E_\infty\) structure over three decades prior~\cite{MayProblemsInLoopspaceTheory} (and it has had a long and storied intervening history), and the delay in its resolution is some indication of the difficulty of this problem.  Some other richer stacks than \(\moduli{fg}\) are known not to admit enrichment: for instance, for this same reason it follows that there cannot exist a topological enrichment of the moduli of (almost any piece of) formal groups equipped with level--\(p\) structures,\footnote{In particular, this appears to inhibit us from producing a spectrum embodying the Lubin--Tate tower at infinite level, which is a bummer from the perspective of the local Langlands program discussed above.} and Lawson has shown that there cannot exist spectra associated to certain stacks of formal \(A\)--modules~\cite{LawsonRealizability}.  Meanwhile, other nearby stacks do admit enrichments: there are spectra \(\TAF\), an abbreviation for ``topological automorphic forms'', which generalize \(\TMF\)~\cite{BehrensLawson}.
 
 Meanwhile, even though we know that the spectrum \(E_\Gamma\) admits an \(E_\infty\)--ring structure, and despite our analysis of \Cref{PowerOpnsSection}, it is not known whether there is an \(E_\infty\)--orientation.  This question has received plenty of attention: most recently, Hopkins and Lawson have produced a spectral sequence computing the space of such maps, the first differential of which encodes the norm coherence condition of \Cref{PowerOpnsSection}~\cite{HopkinsLawson}.  Their work organizes a process that is manually understandable at low heights: the natural map \(\mathbb P(\Susp^{-2} \CP^\infty) \to MU\) is a rational isomorphism of \(E_\infty\)--rings, but at height \(1\) it is not, essentially because the collection of power operations for \(\G_m\)--local \(E_\infty\)--rings acts freely on the source but not on the target.  This can be corrected for with a single rationally-acyclic term, altogether begetting a two-term free resolution of \(MU\) as an \(L_1\)--local \(E_\infty\)--ring spectrum.  Again, this resolution is insufficient when localized at \(\Gamma_2\), and the process continues ad infinitum as in the Hopkins--Lawson paper.  Understanding this spectral sequence even in the height \(2\) case, as specialized to \(E_{\Gamma_2}\), would be an extremely interesting exercise, as it would illuminate the single extra condition at height \(2\) needed to enrich a norm coherent orientation to an \(E_\infty\)--orientation.
 
@@ -340,7 +340,7 @@ In a yet different direction, Lurie's approach to the reinterpretation of the \(
 
 In closing the book, we finally address the lurking physical inspiration for the \(\sigma\)--orientation.  One of the most remarkable developments of modern physics, from the perspective of a mathematician, is their ability to ``guess'' the Atiyah--Singer index theorem~\cite[Section 8.6]{Takhtajan}: there is a path integral formulation for the supertrace of the Dirac operator on a \(\Spin\) manifold \(M\) which expresses it as the time evolution of a massive supersymmetric particle evolving through \(M\), and standard expansions for this physical system lead directly to the discovery of the \(\widehat A\)--genus and, ultimately, the index formula \[\operatorname{ind}\, /\!\!\!\partial_+ = \operatorname{Tr}_s \mathrm e^{-H} = (2 \pi \mathrm i)^{-\frac{n}{2}} \int_M \widehat A(M).\]  The \(\sigma\)--orientation was uncovered by Witten when studying the free loopspace \(\L M\) of the manifold \(M\), which is indeed a natural space to consider when studying string theory on \(M\).  The condition that \(M\) be \(\String\) is exactly the precondition that \(\L M\) be \(\Spin\), so that an analogous Dirac operator exists.  The \(\sigma\)--orientation then arises when trying to express a formula for the index of the Dirac operator on the free loopspace in terms of invariants of \(M\) and using analogous path integral methods~\cite{SegalEll}.
 
-Because of the predictive power of the physical appartus, one might hope to uncover other types of analytic data from it---for instance, a geometric theory of elliptic cohomology.  In addition to the variant of bordism theory described far above, the most long-standing program is due to Stolz and Teichner~\cite{StolzTeichnerWhatIs,StolzTeichnerSusy}, though it is not alone even among physically-inspired theories (for instance, see \cite{DouglasHenriques} as well as many other papers by the same authors).
+Because of the predictive power of the physical apparatus, one might hope to uncover other types of analytic data from it---for instance, a geometric theory of elliptic cohomology.  In addition to the variant of bordism theory described far above, the most long-standing program is due to Stolz and Teichner~\cite{StolzTeichnerWhatIs,StolzTeichnerSusy}, though it is not alone even among physically-inspired theories (for instance, see \cite{DouglasHenriques} as well as many other papers by the same authors).
 
 One of the remarkable features of loop groups is that this process does not appear to be iterable: the theory of compact Lie groups is exceedingly nice (for instance: they have surjective exponential maps), the theory of loopgroups formed from compact Lie groups is only slightly less nice (for instance: they have dense exponential maps), and any extension of this seems to immediately go to pot.\footnote{For instance, little positive is known about the group of free ``tori'', i.e., the loop group of a loop group.}  Finding the ``next step'' after loop groups is an extremely difficult problem that requires such inventive thinking that it could only open enormous avenues for generalization.
 
