typo correction by nat

--- a/retrospective.tex
+++ b/retrospective.tex
@@ -105,7 +105,7 @@ When I got back to MIT in the winter of 1994, Matt Ando and Neil
 Strickland were around and we got to thinking pretty hard about trying
 to understand the $E_{\infty}$ or $A_{\infty}$ maps from $MO[8, \infty)$ to
 $E_{2}$.  We weren't getting anywhere when Mark Hovey told us that
-computations he and Ravenel and done seemed to indicate the that there
+computations he and Ravenel had done seemed to indicate that there
 couldn't be a map of spectra $MO[8, \infty) \to E_{2}$ invariant up to
 homotopy under the action of the binary tetrahedral group.  This
 didn't look good for the first step of the program, so Matt and Neil
