add a citation to Lubin for quotient formal groups

--- a/main.bib
+++ b/main.bib
@@ -2300,6 +2300,19 @@ MRREVIEWER = {Donald M. Davis},
        URL = {http://dx.doi.org/10.1017/S0305004100056887},
 }
 
+@article{Lubin,
+ ISSN = {0003486X},
+ URL = {http://www.jstor.org/stable/1970443},
+ author = {Jonathan Lubin},
+ journal = {Annals of Mathematics},
+ number = {2},
+ pages = {296-302},
+ publisher = {Annals of Mathematics},
+ title = {Finite Subgroups and Isogenies of One-Parameter Formal Lie Groups},
+ volume = {85},
+ year = {1967}
+}
+
 @article {LubinTate,
     AUTHOR = {Lubin, Jonathan and Tate, John},
      TITLE = {Formal moduli for one-parameter formal {L}ie groups},
