--- a/finite.tex
+++ b/finite.tex
@@ -42,7 +42,7 @@ These will occupy our attention for the first half of this Case Study.  In the s
 
 In \Cref{HopfAlgebraLecture} we took for granted the \(\HFtwo\)--Adams spectral sequence, which had the form \[E_2^{*, *} = H^*_{\mathrm{gp}}(\InternalAut_1(\G_a); \widetilde{\HFtwo P_0 X}) \Rightarrow \pi_* X^\wedge_2,\] where we had already established some yoga by which we could identify the dual Steenrod coaction on \(\HFtwo P_0 X\) with an action of \(\InternalAut{\G_a}\) on its associated quasicoherent sheaf over \(\Spec \F_2\).  Our goal in this Lecture is to revise this tool to work for other ring spectra \(E\) and target spectra \(X\), eventually arriving at a spectral sequence with signature \[E_2^{*, *} = H^*(\context{E}; \context{E}(X)) \Rightarrow \pi_* X.\]  In particular, we will encounter along the way the object ``\(\context{E}\)'' envisioned in the introduction to this Case Study.
 
-At a maximum level of vagueness, we are seeking a process by which its homotopy \(\pi_* X\) can be recovered from the \(E\)--homology groups \(E_* X\).  Generally speaking, spectral sequences arise from applying homotopy groups to some topological filtration, so we might also try to filter \(X\) by pieces that look like \(E \sm X\).  Recognizing that \(X\) can be thought of as an \(\S\)--module and \(E \sm X\) can be thought of as its base change to an \(E\)--module, we are inspired to double back and consider as inspiration a completely algebraic analogue of the same situation.  Given a ring map \(f\co R \to S\) and an \(S\)--module \(N\), Grothendieck's framework of \index{descent!faithfully flat}\textit{(faithfully flat) descent} addresses the following questions:
+At a maximum level of vagueness, we are seeking a process by which homotopy groups \(\pi_* X\) can be recovered from \(E\)--homology groups \(E_* X\).  Generally speaking, spectral sequences arise from applying homotopy groups to some topological filtration, so we might also try to filter \(X\) by pieces that look like \(E \sm X\).  Recognizing that \(X\) can be thought of as an \(\S\)--module and \(E \sm X\) can be thought of as its base change to an \(E\)--module, we are inspired to double back and consider as inspiration a completely algebraic analogue of the same situation.  Given a ring map \(f\co R \to S\) and an \(S\)--module \(N\), Grothendieck's framework of \index{descent!faithfully flat}\textit{(faithfully flat) descent} addresses the following questions:
 \begin{enumerate}
 \item When is there an \(R\)--module \(M\) such that \(N \cong S \otimes_R M = f^* M\)?
 \item What extra data can be placed on \(N\), called \textit{descent data}, so that the category of descent data for \(f\) is equivalent to the category of \(R\)--modules under the map \(f^*\)?
@@ -146,10 +146,10 @@ HS \arrow[leftarrow]{r} \arrow[shift left=\baselineskip]{r} \arrow[shift right=\
 and note that an \(R\)--module \(M\) gives rise to a cosimplicial left--\(\mathcal D_{Hf}\)--module which we denote \(\mathcal D_{Hf}(HM)\).  The totalization of this cosimplicial module gives rise to an \(HR\)--module receiving a natural map from \(M\), and we can ask for an analogue of \Cref{OriginalFFDescent}.
 
 \begin{lemma}\label{DescentFromHFpToHZp}
-For \(f\co \Z \to \F_p\) and \(M\) a connective complex of \(\Z\)--modules, the totalization \(\Tot \mathcal D_{Hf}(HM)\) recovers the \(p\)--completion of \(M\).
+For \(f\co \Z \to \F_p\) and \(M\) a connective complex of \(\Z\)--modules, the totalization \(\Tot \mathcal D_{Hf}(HM)\) recovers the \(p\)--completion of \(M\).\footnote{There is an important distinction between a \(p\)--complete module and a module over the \(p\)--completion.  For example, \(\Q_p\) has a (continuous!) \(\Z_p\)--module structure, but it is not \(p\)--complete: the identity \(\Q_p \otimes_{\Z_p} \Z_p / p^j = 0\) inhibits its reconstruction from the associated descent data.}
 \end{lemma}
 \begin{proof}[Proof sketch]
-The Hurewicz map \(H\Z \to \HFp\) kills \((p) \subseteq \pi_0 H\Z\), and we further calculate \[\HFp \sm_{H\Z} \HFp \simeq \HFp \vee \Susp \HFp\] to be connective.  Combining these facts shows that the filtration of \(\mathcal D_{Hf}(HM)\) gives the \(p\)--adic filtration of the homotopy groups \(\pi_* HM\).  If \(\pi_* HM\) is already \(p\)--complete, then the reassembly map \(HM \to \Tot \mathcal D_{Hf}(HM)\) is a weak equivalence.
+The map \(H\Z \to \HFp\) kills the ideal \((p)\), and we calculate \[\HFp \sm_{H\Z} \HFp \simeq \HFp \vee \Susp \HFp\] to be connective.  Together, these facts show that the filtration of \(\mathcal D_{Hf}(HM)\) gives the \(p\)--adic filtration on homotopy.  If \(\pi_* HM\) is already \(p\)--complete, then the reassembly map \(HM \to \Tot \mathcal D_{Hf}(HM)\) is a weak equivalence.
 \end{proof}
 
 We are now close enough to our original situation that we can make the last leap: rather than studying a map \(Hf\co HR \to HS\), we instead have the unit map \(\eta\co \S \to E\) associated to some ring spectrum \(E\).  Fixing a target spectrum \(X\), we define the analogue of the descent object:
