add a missing hat to an HH

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -270,7 +270,7 @@ Second, we must produce an analogue of logarithmic differentiation, which is res
 \begin{enumerate}
     \item The fiber sequence \[T_0 V \to T_* V \to V\] described around \Cref{ConstructionTangentAffineScheme} does not naturally split: an arbitrary formal variety has no intrinsic notion of ``constant vector field''~\cite[V.11.12]{LazardCFGs}.  However, in the presence of a formal group structure \(\widehat{\mathbb H}\) on \(V\), the tangent space acquires a natural splitting analogous to the splitting in classical Lie theory:\footnote{This topic also arises when trying to understand what is special about curves in the image of Cartier's section \(\sigma\): they are \emph{horizontal} in a related sense.}
     \begin{align*}
-    \mathbb H \times (\G_a \otimes \Lie \widehat{\mathbb H}) & \xrightarrow{\cong} T_* \widehat{\mathbb H}, \\
+    \widehat{\mathbb H} \times (\G_a \otimes \Lie \widehat{\mathbb H}) & \xrightarrow{\cong} T_* \widehat{\mathbb H}, \\
     (x, \xi) & \mapsto x +_{\widehat{\mathbb H}} \eps \cdot \xi.
     \end{align*}
     This gives rise to an invariant notion of differentiation: given two formal groups \(\G\), \(\widehat{\mathbb H}\) as well as any pointed map \(f\co \widehat{\mathbb H} \to \G\) of formal varieties, there is a function \[D_{\widehat{\mathbb H}}^{\G} f\co \widehat{\mathbb H} \to \G_a \otimes (\Lie \widehat{\mathbb H})^* \otimes \Lie \G\] characterized by \[T_* f(x +_{\widehat{\mathbb H}} \eps \cdot \xi) = f(x) +_{\widehat{\mathbb H}} \eps \cdot (D_{\G}^{\widehat{\mathbb H}} f)(x) \xi.\]
