--- a/preamble.tex
+++ b/preamble.tex
@@ -212,6 +212,7 @@
 \newcommand{\sm}{\wedge}
 \newcommand{\Susp}{\Sigma}
 \newcommand{\Loops}{\Omega}
+\renewcommand{\emptyset}{\varnothing}
 \renewcommand{\phi}{\varphi}
 \renewcommand{\epsilon}{\varepsilon}
 \newcommand{\eps}{\varepsilon}
